--- a/js/.env
+++ b/js/.env
@@ -1,1 +1,1 @@
-TOKEN=MTAwOTEwNzg0NjM5MjIwMTM0Nw.GCKsRN.VNZH1I7yjmyH_Bfjy6W_A-q-3R8LC1MgUBsP9M
+TOKEN=MTAwOTEwNzg0NjM5MjIwMTM0Nw.GGEBsD.qsHfnmK7bHc8ssHZTKI-CWzLR7-x43z7-Cls-c
